Richer weight's object name(利用观察者模式，view、data双向绑定实现数据变化刷新界面)

--- a/resources/META-INF/plugin.xml
+++ b/resources/META-INF/plugin.xml
@@ -12,6 +12,9 @@
 <html>
   <b>1.2</b> (08/21/2019)
   <ul>
+    <li>Richer weight's object name</li>
+  </ul>
+  <ul>
     <li>Generate onClickListeners(生成onClickListeners代码)</li>
   </ul>
   <ul>
